--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "debug": "tsc && node example/test.js"
+    "build": "npm run lint && tsc",
+    "debug": "npm run lint && tsc && node example/test.js",
+    "lint": "npx tslint -c tslint.json 'src/**/*.ts'"
   },
   "author": "Shizey & Hason",
   "license": "ISC",
   "devDependencies": {
-    "discord.js": "^13.1.0"
+    "tslint": "^6.1.3"
   },
   "dependencies": {
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "discord.js": "^13.1.0"
   }
 }
