--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "author": "Shizey & Hason",
   "license": "ISC",
-  "devDependencies": {
-    "tslint": "^6.1.3"
-  },
   "dependencies": {
-    "typescript": "^4.4.3",
-    "discord.js": "^13.1.0"
+    "typescript": "^4.4.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "discord.js": "^13.1.0",
+    "eslint": "^8.1.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
