--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "debug": "tsc && node example/test.js",
-    "lint": "npx tslint -c tslint.json 'src/**/*.ts'"
+    "lint": "npx tslint -c tslint.json 'src/**/*.ts'",
+    "doc": "npx typedoc src/index.ts"
   },
   "author": "Shizey & Hason",
   "license": "ISC",
@@ -18,6 +19,8 @@
     "@typescript-eslint/parser": "^5.2.0",
     "discord.js": "^13.1.0",
     "eslint": "^8.1.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "typedoc": "^0.22.10",
+    "typedoc-plugin-no-inherit": "^1.3.1"
   }
 }
